Fix CSS to prevent horizontal scrolling across page

--- a/src/App.css
+++ b/src/App.css
@@ -4,9 +4,8 @@
   /* background-color: rgb(22, 21, 21); */
   /* background-color: rgb(12, 12, 12); */
   background-color: white;
-
+  box-sizing: border-box;
   min-height: 100vh;
-  min-width: 100vw;
   display: flex;
   flex-direction: column;
   align-items: center;
