--- a/src/components/Container.css
+++ b/src/components/Container.css
@@ -1,10 +1,9 @@
 
 .container {
   position: relative;
-  width: 100vw;
+  /* width: 100vw; */
   height: auto;
   min-height:50vmin;
-  padding:2vmin;
   /* background-color: rgb(17, 17, 17); */
   /* background-color:white; */
   box-sizing: border-box;
@@ -18,7 +17,7 @@
   /* margin:0,auto; */
   box-sizing: border-box;
   /* overflow-x:auto; */
-  width: 100vmin;
+  /* width: 100vw; */
   min-width: 100%;
   height:100%;
   display: inline-flex;
@@ -56,7 +55,8 @@
 
 .container-title {
   font-size: 3vmin;
-  padding: 1vmin;
+  padding-top: 1vmin;
+  padding-bottom: 1vmin;
 }
 
 .container:nth-of-type(2n){
